// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Direct Limit Orders buildDirectLimitOrder p2p: P2P_Order_Data_Snapshot 1`] = `
Object {
  "data": Object {
    "expiry": 1671494400,
    "maker": "0xaC39b311DCEb2A4b2f5d8461c1cdaF756F4F7Ae9",
    "makerAmount": "1000000000000000000",
    "makerAsset": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
    "nonceAndMeta": "2693234308085732315020447542820174961101890254772",
    "taker": "0xD7c0Cd9e7d2701c710D64Fc492C7086679BdF7b4",
    "takerAmount": "8000000000000000000",
    "takerAsset": "0x2b591e99afe9f32eaa6214f7b7629768c40eeb39",
  },
  "domain": Object {
    "chainId": 3,
    "name": "AUGUSTUS RFQ",
    "verifyingContract": "0x34268C38fcbC798814b058656bC0156C7511c0E4",
    "version": "1",
  },
  "types": Object {
    "Order": Array [
      Object {
        "name": "nonceAndMeta",
        "type": "uint256",
      },
      Object {
        "name": "expiry",
        "type": "uint128",
      },
      Object {
        "name": "makerAsset",
        "type": "address",
      },
      Object {
        "name": "takerAsset",
        "type": "address",
      },
      Object {
        "name": "maker",
        "type": "address",
      },
      Object {
        "name": "taker",
        "type": "address",
      },
      Object {
        "name": "makerAmount",
        "type": "uint256",
      },
      Object {
        "name": "takerAmount",
        "type": "uint256",
      },
    ],
  },
}
`;

exports[`Direct Limit Orders buildDirectLimitOrder: Order_Data_Snapshot 1`] = `
Object {
  "data": Object {
    "expiry": 1671494400,
    "maker": "0xaC39b311DCEb2A4b2f5d8461c1cdaF756F4F7Ae9",
    "makerAmount": "1000000000000000000",
    "makerAsset": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
    "nonceAndMeta": "1461501637330902918203684832716283019655932542976",
    "taker": "0x0000000000000000000000000000000000000000",
    "takerAmount": "8000000000000000000",
    "takerAsset": "0x2b591e99afe9f32eaa6214f7b7629768c40eeb39",
  },
  "domain": Object {
    "chainId": 3,
    "name": "AUGUSTUS RFQ",
    "verifyingContract": "0x34268C38fcbC798814b058656bC0156C7511c0E4",
    "version": "1",
  },
  "types": Object {
    "Order": Array [
      Object {
        "name": "nonceAndMeta",
        "type": "uint256",
      },
      Object {
        "name": "expiry",
        "type": "uint128",
      },
      Object {
        "name": "makerAsset",
        "type": "address",
      },
      Object {
        "name": "takerAsset",
        "type": "address",
      },
      Object {
        "name": "maker",
        "type": "address",
      },
      Object {
        "name": "taker",
        "type": "address",
      },
      Object {
        "name": "makerAmount",
        "type": "uint256",
      },
      Object {
        "name": "takerAmount",
        "type": "uint256",
      },
    ],
  },
}
`;

exports[`Direct Limit Orders getLimitOrders 1`] = `
Array [
  Object {
    "chainId": 137,
    "createdAt": 1656679368,
    "expiry": 0,
    "fillableBalance": "0",
    "maker": "0x05182e579fdfcf69e4390c3411d8fea1fb6467cf",
    "makerAmount": "2500000000000000000",
    "makerAsset": "0x8f3cf7ad23cd3cadbd9735aff958023239c6a063",
    "makerBalance": "2500000000000000000",
    "nonceAndMeta": "3998510076563899983602277246732469323822440145919543206437978112",
    "orderHash": "0x57fd9ac6a1753459b1074dbff5e513527df5ecad03c63b56c06b14425d1775d7",
    "permitMakerAsset": null,
    "reservedBalance": "0",
    "signature": "0x9dc3dbedd6828ca1f26a5595e73d0aa521a4d601317089f424ac45c2111f24124a1282748ae5b03f64042cca0e425b51e0d002dbc99b4364a1579aa0ed41cb441b",
    "state": "FULFILLED",
    "swappableBalance": "0",
    "taker": "0xdef171fe48cf0115b1d80b88dc8eab59176fee57",
    "takerAmount": "50000000000000000000",
    "takerAsset": "0x42d61d766b85431666b39b89c43011f24451bff6",
    "takerFromMeta": "0x0000000000000000000000000000000000000000",
    "transactionHash": "0x20256cbb86b1a1d76e9387e163d478be985daade672f38224299564b52ab1471",
    "type": "LIMIT",
    "updatedAt": 1656935423,
  },
  Object {
    "chainId": 137,
    "createdAt": 1656666904,
    "expiry": 0,
    "fillableBalance": "5000000000000000000",
    "maker": "0x05182e579fdfcf69e4390c3411d8fea1fb6467cf",
    "makerAmount": "5000000000000000000",
    "makerAsset": "0x8f3cf7ad23cd3cadbd9735aff958023239c6a063",
    "makerBalance": "0",
    "nonceAndMeta": "593926088021785083283709768831021733393516690658598206849417216",
    "orderHash": "0xd0f98ebf56a4ad9bf462f23939fd1e582ee02f5625ae2bffd0b6e0405093fd3c",
    "permitMakerAsset": null,
    "reservedBalance": "0",
    "signature": "0xd3c016f9a539a639ce9d326a4e467d4b4c466aed582e130646fb2ebd56b4b8b10516c670b290940110247189daa0250f9867466b5745407d72f83ae6a1ca5a861c",
    "state": "CANCELLED",
    "swappableBalance": "5000000000000000000",
    "taker": "0xdef171fe48cf0115b1d80b88dc8eab59176fee57",
    "takerAmount": "216400000000000000000",
    "takerAsset": "0x42d61d766b85431666b39b89c43011f24451bff6",
    "takerFromMeta": "0x0000000000000000000000000000000000000000",
    "transactionHash": "0x891c5337344d888c462be884db7db2592cdf318cb068112f375fd2148b682901",
    "type": "LIMIT",
    "updatedAt": 1656672118,
  },
  Object {
    "chainId": 137,
    "createdAt": 1656666890,
    "expiry": 0,
    "fillableBalance": "5000000000000000000",
    "maker": "0x05182e579fdfcf69e4390c3411d8fea1fb6467cf",
    "makerAmount": "5000000000000000000",
    "makerAsset": "0x8f3cf7ad23cd3cadbd9735aff958023239c6a063",
    "makerBalance": "2499000000000000000",
    "nonceAndMeta": "7629770914771116603211363454843183632718834742935224324798283776",
    "orderHash": "0x874193472d16c3a44420f5aabf231648b51fcc2fc2d8b8de4a87fb5ee77c7600",
    "permitMakerAsset": null,
    "reservedBalance": "0",
    "signature": "0xa9a764a0231394ee1cc857797bf2627fde63859049a9a71d26d135094c7fd9b94271567555522e6d40e0b00b9aae20828a75187a52e4f99e180b1ecd0b24184c1c",
    "state": "CANCELLED",
    "swappableBalance": "5000000000000000000",
    "taker": "0xdef171fe48cf0115b1d80b88dc8eab59176fee57",
    "takerAmount": "216400000000000000000",
    "takerAsset": "0x42d61d766b85431666b39b89c43011f24451bff6",
    "takerFromMeta": "0x0000000000000000000000000000000000000000",
    "transactionHash": "0xa2aa7ec751f8d523dfa6dfe1a0cdfdfb087c38c264088cd9b0bdb2da1734cdd2",
    "type": "LIMIT",
    "updatedAt": 1656672024,
  },
]
`;
